kubernetes/apps/observability/kube-prometheus-stack/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alerts.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
